@@ -1,0 +1,13 @@
+#!/usr/bin/env python
+
+import sys
+from os.path import dirname, join, pardir, abspath
+sys.path.insert(0, join(dirname(__file__), pardir, 'share',
+                        'time-slider', 'lib'))
+
+from time_slider.snapnowui import main
+
+# Pass through the executable path in case it needs to
+# be invoked via gksu (user has insufficient priviliges) 
+main(abspath(__file__))
+
